--- a/transferlearning.ipynb
+++ b/transferlearning.ipynb
@@ -50,7 +50,7 @@
       },
       "source": [
         "#!kaggle datasets download -d kazanova/sentiment140 -p /content\n",
-        "!kaggle competitions download -c dogs-vs-cats -p /content # api copied from kaggle "
+        "kaggle competitions download -c dogs-vs-cats -p /content # api copied from kaggle "
       ],
       "execution_count": 10,
       "outputs": [
